# pricing_dwh_aggregation_etl

./: .gitattributes  .gitignore  INSTALL.md  README.md  TESTING.md  pyproject.toml  requirements.txt  run_pricing_aggregation_etl.py
src/PricingAggregationETL/: PricingAggregationETL.py  __init__.py
src/PricingAggregationETL/helpers/: PricingAggregationHelpers.py
test/: __init__.py  test_pricing_aggregation_etl.py
