[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PricingAggregationETL"
version = "0.1.0"
description = "Pricing data aggregation ETL pipeline for data warehouse analytics"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Zerveme", email = "noreply@zerveme.com"}
]
keywords = ["etl", "pricing", "data-warehouse", "aggregation", "data-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "zervedataplatform @ git+https://eksp2pxd8kog9vz55scbop4urjrsqi@bitbucket.org/zervemellc/zervedataplatform.git@v0.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/zerveme/PricingAggregationETL"

[tool.setuptools.packages.find]
where = ["src"]
include = ["PricingAggregationETL*"]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''